objects/Email_Template_Selection_Settings__c.object
<CustomObject><fields>
        <fullName>Email_Template_Name__c</fullName>
        <description>This field stores the value of base email template with respect to field name</description>
        <inlineHelpText>The base email template name related to the event. Example API Name "Test_Enrollment_Emails_Self_Paced_ENU_Natick" - only "Test_Enrollment_Emails" would go in this field.  The rest is added dynamically.</inlineHelpText>
        <label>Email Template Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Event_Name__c</fullName>
        <description>this field stores the value of events</description>
        <inlineHelpText>Friendly name of the event the notification will be sent for (ie: Enrollment Confirmation - Registered)</inlineHelpText>
        <label>Event Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>FieldName__c</fullName>
        <description>This field stores the field name for respective Email template</description>
        <inlineHelpText>API Name of the checkbox field on the Enrollment object used to map to the template specified.</inlineHelpText>
        <label>FieldName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields><customSettingsType>List</customSettingsType><description>This custom setting is used to select the correct Customer Training notification email template based on the event</description><enableFeeds>false</enableFeeds><label>Email Template Selection Settings</label><visibility>Public</visibility></CustomObject>